--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           
                 <div class="col-lg-4 col-md-6">
                     <div class="card product-card">
-                        <img src="https://images.unsplash.com/photo-1509440159596-0249088772ff?w=600" class="card-img-top" alt="Croissant">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR-OYx_kXRURqFqB8fb_D8Z9rn2qk8ZfoJjKg&s" class="card-img-top" alt="Croissant">
                         <div class="card-body">
                             <h5 class="card-title">Vajas Croissant</h5>
                             <p class="card-text">Frissen sült, omlós francia croissant.</p>
@@ -271,4 +271,5 @@
 </body>
 
 </html>
+
 
